[tool.poetry]
name = "chwra"
version = "0.1.0"
description = ""
authors = ["Chris Brew <brewc@dy6nm2ng4q.legal.regn.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.18.0"
transformers = "^4.38.2"
torch = "^2.2.1"
evaluate = "^0.4.1"
wandb = "^0.16.4"
scikit-learn = "^1.4.1.post1"
accelerate = "^0.27.2"
lightning = "^2.2.1"
sentencepiece = "^0.2.0"
torchvision = "^0.17.1"
torchmetrics = "^1.3.1"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
